messaging_app/messaging_app/kubeservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          emptyDir: {}  # Ephemeral storage — use PersistentVolume for production

---
apiVersion: v1
kind: Service
metadata:
  name: db   #  Django will use this as MYSQL_HOST=db
spec:
  selector:
    app: mysql
    version : blue
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None  # Optional: makes it a headless service (you can remove this line)
